requirements - jobs and houses implemented

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
           <!-- NAVLINKS -->
           <a href="#/about" class="nav-link">About</a>
           <a href="#/cars" class="nav-link">Cars 🚗</a>
-
-          <!-- FIXME add a link tag to get to your houses page -->
+          <a href="#/houses" class="nav-link">Houses 🏡</a>
+          <a href="#/jobs" class="nav-link">Jobs 💼</a>
         </div>
       </div>
     </nav>
