watchlist semi-implemented | have to review bugs

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <a href="#/cars" class="nav-link">Cars 🚗</a>
           <a href="#/houses" class="nav-link">Houses 🏡</a>
           <a href="#/jobs" class="nav-link">Jobs 💼</a>
+          <a href="#/watchlist" class="nav-link">Watchlist ❗</a>
         </div>
       </div>
     </nav>
